install/base/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: libvirt-operator
      path: /mutate-libvirt-karelvanhecke-com-v1alpha1-cloudinit
  failurePolicy: Fail
  name: cloudinit-v1alpha1.libvirt.karelvanhecke.com
  rules:
  - apiGroups:
    - libvirt.karelvanhecke.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - cloudinits
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: libvirt-operator
      path: /mutate-libvirt-karelvanhecke-com-v1alpha1-domain
  failurePolicy: Fail
  name: domains-v1alpha1.libvirt.karelvanhecke.com
  rules:
  - apiGroups:
    - libvirt.karelvanhecke.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - domains
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: libvirt-operator
      path: /mutate-libvirt-karelvanhecke-com-v1alpha1-volume
  failurePolicy: Fail
  name: volumes-v1alpha1.libvirt.karelvanhecke.com
  rules:
  - apiGroups:
    - libvirt.karelvanhecke.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - volumes
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: libvirt-operator
      path: /validate-libvirt-karelvanhecke-com-v1alpha1-cloudinit
  failurePolicy: Fail
  name: cloudinit-v1alpha1.libvirt.karelvanhecke.com
  rules:
  - apiGroups:
    - libvirt.karelvanhecke.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - cloudinits
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: libvirt-operator
      path: /validate-libvirt-karelvanhecke-com-v1alpha1-domain
  failurePolicy: Fail
  name: domains-v1alpha1.libvirt.karelvanhecke.com
  rules:
  - apiGroups:
    - libvirt.karelvanhecke.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - domains
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: libvirt-operator
      path: /validate-libvirt-karelvanhecke-com-v1alpha1-volume
  failurePolicy: Fail
  name: volumes-v1alpha1.libvirt.karelvanhecke.com
  rules:
  - apiGroups:
    - libvirt.karelvanhecke.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - volumes
  sideEffects: None
